--- a/family.html
+++ b/family.html
@@ -25,57 +25,57 @@
     <main>
         <div class="familiescontainer">
             <!--https://drive.google.com/file/d/1IJmeEEBPyrosDd1E9DvqcjF0NHJC62FG/view?usp=sharing-->
-            <img class="item"  srcset="https://drive.google.com/uc?id=1IJmeEEBPyrosDd1E9DvqcjF0NHJC62FG" alt="Family Image" >
+            <img class="item"  src="https://drive.google.com/uc?id=1IJmeEEBPyrosDd1E9DvqcjF0NHJC62FG" alt="Family Image" >
             <!--https://drive.google.com/file/d/17J4iN2SBonOE7HVQ-buO1SDTrt0NBsMG/view?usp=sharing-->
-            <img class="item"  srcset="https://drive.google.com/uc?id=17J4iN2SBonOE7HVQ-buO1SDTrt0NBsMG" alt="Family Image" loading="lazy">
+            <img class="item"  src="https://drive.google.com/uc?id=17J4iN2SBonOE7HVQ-buO1SDTrt0NBsMG" alt="Family Image" loading="lazy">
             <!--https://drive.google.com/file/d/15T5gEUDtZKOv3gX0aWI9Etj0Li2RMLuO/view?usp=sharing-->
-            <img class="item"  srcset="https://drive.google.com/uc?id=15T5gEUDtZKOv3gX0aWI9Etj0Li2RMLuO" alt="Family Image" loading="lazy">
+            <img class="item"  src="https://drive.google.com/uc?id=15T5gEUDtZKOv3gX0aWI9Etj0Li2RMLuO" alt="Family Image" loading="lazy">
             <!--https://drive.google.com/file/d/1IH90Ogs5uSIVQGn_kNHh00eT-hVl9d_d/view?usp=sharing-->
-            <img class="item" class="lazy"  srcset="https://drive.google.com/uc?id=1IH90Ogs5uSIVQGn_kNHh00eT-hVl9d_d" alt="Family Image" loading="lazy"> 
+            <img class="item" class="lazy"  src="https://drive.google.com/uc?id=1IH90Ogs5uSIVQGn_kNHh00eT-hVl9d_d" alt="Family Image" loading="lazy"> 
             <!--https://drive.google.com/file/d/1VzTjSet46sju9CnN-0fpyfwQHpxoGrkL/view?usp=sharing-->
-            <img class="item" class="lazy" srcset="https://drive.google.com/uc?id=1VzTjSet46sju9CnN-0fpyfwQHpxoGrkL" alt="Family Image" loading="lazy">
+            <img class="item" class="lazy" src="https://drive.google.com/uc?id=1VzTjSet46sju9CnN-0fpyfwQHpxoGrkL" alt="Family Image" loading="lazy">
             <!--https://drive.google.com/file/d/1hLW8Bcr_iukVIzhqYfHLFeK1UdeIZ4a2/view?usp=sharing-->
-            <img class="item" class="lazy" c srcset="https://drive.google.com/uc?id=1hLW8Bcr_iukVIzhqYfHLFeK1UdeIZ4a2" alt="Family Image" loading="lazy"> 
+            <img class="item" class="lazy" c src="https://drive.google.com/uc?id=1hLW8Bcr_iukVIzhqYfHLFeK1UdeIZ4a2" alt="Family Image" loading="lazy"> 
             <!--https://drive.google.com/file/d/1Sj6aAHBvKglG0gLvL0vrNzfxveaavTYW/view?usp=sharing-->  
-            <img class="item" class="lazy" srcset="https://drive.google.com/uc?id=1Sj6aAHBvKglG0gLvL0vrNzfxveaavTYW" alt="Family Image" loading="lazy">  
+            <img class="item" class="lazy" src="https://drive.google.com/uc?id=1Sj6aAHBvKglG0gLvL0vrNzfxveaavTYW" alt="Family Image" loading="lazy">  
             <!--https://drive.google.com/file/d/1HgTyOkeqwE1ZDL4uIEVmNOQqwEjoe0cP/view?usp=sharing--> 
-            <img class="item" class="lazy" srcset="https://drive.google.com/uc?id=1HgTyOkeqwE1ZDL4uIEVmNOQqwEjoe0cP" alt="Family Image" loading="lazy"> 
+            <img class="item" class="lazy" src="https://drive.google.com/uc?id=1HgTyOkeqwE1ZDL4uIEVmNOQqwEjoe0cP" alt="Family Image" loading="lazy"> 
             <!--https://drive.google.com/file/d/1FDoR1ptOnvOTStaXfW3XwdaE-2SfRx7s/view?usp=sharing--> 
-            <img class="item" class="lazy" srcset="https://drive.google.com/uc?id=1FDoR1ptOnvOTStaXfW3XwdaE-2SfRx7s" alt="Family Image" loading="lazy"> 
+            <img class="item" class="lazy" src="https://drive.google.com/uc?id=1FDoR1ptOnvOTStaXfW3XwdaE-2SfRx7s" alt="Family Image" loading="lazy"> 
             <!--https://drive.google.com/file/d/1rt2cXOj2WXruPLMjZPBSIK69um4kQlyg/view?usp=sharing--> 
-            <img class="item" class="lazy" srcset="https://drive.google.com/uc?id=1onwiE-MYllfghuQ3r2GirW2MUhf5ep1G" alt="Family Image" loading="lazy"> 
+            <img class="item" class="lazy" src="https://drive.google.com/uc?id=1onwiE-MYllfghuQ3r2GirW2MUhf5ep1G" alt="Family Image" loading="lazy"> 
             <!--https://drive.google.com/file/d/1dtuvfqt3lR4RP1uricN57lpbJqhVfaJU/view?usp=sharing--> 
-            <img class="item" class="lazy" srcset="https://drive.google.com/uc?id=1dtuvfqt3lR4RP1uricN57lpbJqhVfaJU" alt="Family Image" loading="lazy"> 
+            <img class="item" class="lazy" src="https://drive.google.com/uc?id=1dtuvfqt3lR4RP1uricN57lpbJqhVfaJU" alt="Family Image" loading="lazy"> 
             <!--https://drive.google.com/file/d/1W_mkSptFTR-uL5B_Ekx2Tu_FtN3KCnPM/view?usp=sharing-->
-            <img class="item" class="lazy" srcset="https://drive.google.com/uc?id=1W_mkSptFTR-uL5B_Ekx2Tu_FtN3KCnPM" alt="Family Image" loading="lazy"> 
+            <img class="item" class="lazy" src="https://drive.google.com/uc?id=1W_mkSptFTR-uL5B_Ekx2Tu_FtN3KCnPM" alt="Family Image" loading="lazy"> 
             <!--https://drive.google.com/file/d/1dADWTC8TI5e20QMRjQzfgF_OPAElJcgz/view?usp=sharing-->
-            <img class="item" class="lazy" srcset="https://drive.google.com/uc?id=1dADWTC8TI5e20QMRjQzfgF_OPAElJcgz" alt="Family Image" loading="lazy"> 
+            <img class="item" class="lazy" src="https://drive.google.com/uc?id=1dADWTC8TI5e20QMRjQzfgF_OPAElJcgz" alt="Family Image" loading="lazy"> 
             <!--https://drive.google.com/file/d/1_PJIZW2SWOn40kQKHEBZ5YwqxXGgSVWN/view?usp=sharing-->
-            <img class="item" class="lazy" srcset="https://drive.google.com/uc?id=1_PJIZW2SWOn40kQKHEBZ5YwqxXGgSVWN" alt="Family Image" loading="lazy"> 
+            <img class="item" class="lazy" src="https://drive.google.com/uc?id=1_PJIZW2SWOn40kQKHEBZ5YwqxXGgSVWN" alt="Family Image" loading="lazy"> 
             <!--https://drive.google.com/file/d/1so1G_sBfJwjvqjOM_fluCKu3u1B1Jt5L/view?usp=sharing-->
-            <img class="item" class="lazy" srcset="https://drive.google.com/uc?id=1so1G_sBfJwjvqjOM_fluCKu3u1B1Jt5L" alt="Family Image" loading="lazy"> 
+            <img class="item" class="lazy" src="https://drive.google.com/uc?id=1so1G_sBfJwjvqjOM_fluCKu3u1B1Jt5L" alt="Family Image" loading="lazy"> 
             <!--https://drive.google.com/file/d/1r3zJwghj56wRqvwU2P4v8x-AjP2pm-Xz/view?usp=sharing-->
-            <img class="item" class="lazy" srcset="https://drive.google.com/uc?id=1r3zJwghj56wRqvwU2P4v8x-AjP2pm-Xz" alt="Family Image" loading="lazy"> 
+            <img class="item" class="lazy" src="https://drive.google.com/uc?id=1r3zJwghj56wRqvwU2P4v8x-AjP2pm-Xz" alt="Family Image" loading="lazy"> 
             <!--https://drive.google.com/file/d/1GPVHNrHp4GOLlnUduP931fvPCaGjzg2g/view?usp=sharing-->
-            <img class="item" class="lazy" srcset="https://drive.google.com/uc?id=1GPVHNrHp4GOLlnUduP931fvPCaGjzg2g" alt="Family Image" loading="lazy"> 
+            <img class="item" class="lazy" src="https://drive.google.com/uc?id=1GPVHNrHp4GOLlnUduP931fvPCaGjzg2g" alt="Family Image" loading="lazy"> 
             <!--https://drive.google.com/file/d/1oHsZFTzOZZVZ9UIvl8sw6j3H6xWOAAoU/view?usp=sharing-->
-            <img class="item" class="lazy" srcset="https://drive.google.com/uc?id=1oHsZFTzOZZVZ9UIvl8sw6j3H6xWOAAoU" alt="Family Image" loading="lazy"> 
+            <img class="item" class="lazy" src="https://drive.google.com/uc?id=1oHsZFTzOZZVZ9UIvl8sw6j3H6xWOAAoU" alt="Family Image" loading="lazy"> 
             <!--https://drive.google.com/file/d/1STPEIXCNASSpEB3Hmdhn-gllYxrJxhM4/view?usp=sharing-->
-            <img class="item" class="lazy" srcset="https://drive.google.com/uc?id=1STPEIXCNASSpEB3Hmdhn-gllYxrJxhM4" alt="Family Image" loading="lazy"> 
+            <img class="item" class="lazy" src="https://drive.google.com/uc?id=1STPEIXCNASSpEB3Hmdhn-gllYxrJxhM4" alt="Family Image" loading="lazy"> 
             <!--https://drive.google.com/file/d/16d5Hr2P9X267AFXZLvVV6loRVVkjSBeA/view?usp=sharing-->
-            <img class="item" class="lazy" srcset="https://drive.google.com/uc?id=16d5Hr2P9X267AFXZLvVV6loRVVkjSBeA" alt="Family Image" loading="lazy"> 
+            <img class="item" class="lazy" src="https://drive.google.com/uc?id=16d5Hr2P9X267AFXZLvVV6loRVVkjSBeA" alt="Family Image" loading="lazy"> 
             <!--https://drive.google.com/file/d/1N7baPbosAyCtmyL2FdfJDukZaQoxN9pQ/view?usp=sharing-->
-            <img class="item" class="lazy" srcset="https://drive.google.com/uc?id=1N7baPbosAyCtmyL2FdfJDukZaQoxN9pQ" alt="Family Image" loading="lazy"> 
+            <img class="item" class="lazy" src="https://drive.google.com/uc?id=1N7baPbosAyCtmyL2FdfJDukZaQoxN9pQ" alt="Family Image" loading="lazy"> 
             <!--https://drive.google.com/file/d/1ZCnMArw8nBtA7blXD70b-ZXFn_b2-kIW/view?usp=sharing-->
-            <img class="item" class="lazy" srcset="https://drive.google.com/uc?id=1ZCnMArw8nBtA7blXD70b-ZXFn_b2-kIW" alt="Family Image" loading="lazy"> 
+            <img class="item" class="lazy" src="https://drive.google.com/uc?id=1ZCnMArw8nBtA7blXD70b-ZXFn_b2-kIW" alt="Family Image" loading="lazy"> 
             <!--https://drive.google.com/file/d/1kIxs7XVzFqx_lLT9KrLXRHcPeaNeYjxr/view?usp=sharing-->
-            <img class="item" class="lazy" srcset="https://drive.google.com/uc?id=1kIxs7XVzFqx_lLT9KrLXRHcPeaNeYjxr" alt="Family Image" loading="lazy"> 
+            <img class="item" class="lazy" src="https://drive.google.com/uc?id=1kIxs7XVzFqx_lLT9KrLXRHcPeaNeYjxr" alt="Family Image" loading="lazy"> 
             <!--https://drive.google.com/file/d/1R15CdCdEV5CRf7fWKYwFXMJs-fDrLmCT/view?usp=sharing -->
-            <img class="item" class="lazy" srcset="https://drive.google.com/uc?id=1R15CdCdEV5CRf7fWKYwFXMJs-fDrLmCT" alt="Family Image" loading="lazy">  
+            <img class="item" class="lazy" src="https://drive.google.com/uc?id=1R15CdCdEV5CRf7fWKYwFXMJs-fDrLmCT" alt="Family Image" loading="lazy">  
             <!--https://drive.google.com/file/d/1ndI7OYL1V_7OPNnagul3XCD02bNhvDJc/view?usp=sharing-->
-            <img class="item" class="lazy" srcset="https://drive.google.com/uc?id=1ndI7OYL1V_7OPNnagul3XCD02bNhvDJc" alt="Family Image" loading="lazy"> 
+            <img class="item" class="lazy" src="https://drive.google.com/uc?id=1ndI7OYL1V_7OPNnagul3XCD02bNhvDJc" alt="Family Image" loading="lazy"> 
             <!--https://drive.google.com/file/d/1MDz1gJ2s6JL2MbkZ3WfgYer4o-qvnTPk/view?usp=sharing-->
-            <img class="item" class="lazy" srcset="https://drive.google.com/uc?id=1MDz1gJ2s6JL2MbkZ3WfgYer4o-qvnTPk" alt="Family Image" loading="lazy"> 
+            <img class="item" class="lazy" src="https://drive.google.com/uc?id=1MDz1gJ2s6JL2MbkZ3WfgYer4o-qvnTPk" alt="Family Image" loading="lazy"> 
             
             
 
@@ -86,11 +86,11 @@
             jjalsj@gmail.com 208-528-2969
         </span>
         <div class="social"></div>
-        <a href="https://www.facebook.com/hashtag/jerijohnstonphotography"> <img srcset="images\facebookicon.png" alt="facebook link"></a>
-        <a href="https://www.instagram.com/jeri.johnston/?hl=en"> <img srcset="images\instagramicon.png" alt="Instagram"></a>
-        <a href="https://pin.it/6AYN9Uc"> <img srcset="images\pinteresticon.png" alt="Pinterest"></a>
+        <a href="https://www.facebook.com/hashtag/jerijohnstonphotography"> <img src="images\facebookicon.png" alt="facebook link"></a>
+        <a href="https://www.instagram.com/jeri.johnston/?hl=en"> <img src="images\instagramicon.png" alt="Instagram"></a>
+        <a href="https://pin.it/6AYN9Uc"> <img src="images\pinteresticon.png" alt="Pinterest"></a>
 
     </footer>
-    <script srcset="lazyload.js"></script>
+    <script src="lazyload.js"></script>
     </body>
 </html>
