--- a/engagement.html
+++ b/engagement.html
@@ -5,6 +5,8 @@
     <head>
         <title> Johnston Photography - Engagement</title>
         <link rel="stylesheet" href="large.css">
+        <link rel="stylesheet" href="medium.css">
+        <link rel="stylesheet" href="small.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Marck+Script&display=swap" rel="stylesheet">
